--- a/math-alg.sty
+++ b/math-alg.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-alg}[2011/12/11 Useful commands for writing texts about algebra in general]
+\ProvidesPackage{math-alg}[2014/09/09 Useful commands for writing texts about algebra in general]
 \RequirePackage{math-general}
 
 % categories
@@ -21,6 +21,7 @@
 \newcommand\liealg{\mathfrak}                   % Lie algebra
 \newcommand\liealgof[1]{\operatorname{Lie}(#1)} % Lie algebra of a group
 \newcommand\lieglof[1]{\liealg{gl}(#1)}         % gl(V)
+\newcommand\liegl[1]{\liealg{gl}_{#1}}          % gl_n
 \newcommand\liesl[1]{\liealg{sl}_{#1}}          % sl_n
 \newcommand\ad{\operatorname{ad}}               % adjunction
 
