--- a/short-lecture-notes.cls
+++ b/short-lecture-notes.cls
@@ -164,9 +164,9 @@
 
 \ifbw
     \setkomafont{title}{\normalfont\normalcolor\scshape\LARGE\color{sectioningcolor}}
-    \setkomafont{part}{\normalfont\normalcolor\bfseries\Large\color{sectioningcolor}}
-    \setkomafont{partnumber}{\normalfont\normalcolor\bfseries\Large\color{sectioningcolor}}
-    \setkomafont{section}{\normalfont\normalcolor\scshape\Large\color{sectioningcolor}}
+    \setkomafont{part}{\normalfont\normalcolor\bfseries\Large\color{sectioningcolor}\centering}
+    \setkomafont{partnumber}{\normalfont\normalcolor\bfseries\Large\color{sectioningcolor}\centering}
+    \setkomafont{section}{\normalfont\normalcolor\scshape\Large\color{sectioningcolor}\centering}
     \setkomafont{subsection}{\normalfont\normalcolor\scshape\large\color{sectioningcolor}}
     \setkomafont{sectionentry}{\normalfont\normalcolor\scshape}
     \setkomafont{subsubsection}{\normalfont\normalcolor\itshape\color{sectioningcolor}}
